# yast-control-center-gnome

./: .travis.yml  AUTHORS  ChangeLog  Dockerfile  MAINTAINER  Makefile.am  POTFILES  README.md  RPMNAME  TODO  aclocal.m4  autogen.sh  configure.in  configure.in.in  gnome-control-center.patch  yast2-control-center-gnome.spec.in
etc/: Makefile.am  YaST-gnome.desktop.in  YaST-gnome.menu  index.theme  suse-y2cc-gnome-hardware.directory  suse-y2cc-gnome-misc.directory  suse-y2cc-gnome-net-devices.directory  suse-y2cc-gnome-net-services.directory  suse-y2cc-gnome-software.directory  suse-y2cc-gnome-system.directory  y2cc-gnome.desktop.in  y2cc-gnome.menu  yast-gnome-apparmor.directory  yast-gnome-ha.directory  yast-gnome-hardware.directory  yast-gnome-misc.directory  yast-gnome-net-devices.directory  yast-gnome-net-services.directory  yast-gnome-security.directory  yast-gnome-software.directory  yast-gnome-support.directory  yast-gnome-system.directory  yast-gnome-virtualization.directory  yast-gnome.directory  yast2-control-center-gnome.schemas.in
package/: yast2-control-center-gnome.changes  yast2-control-center-gnome.spec
po/: Makefile.in  de.po  es.po  fr.po  ja.po  ko.po  ru.po  zh_CN.po  zh_TW.po
src/: Makefile.am  cc-shell-category-view.c  control-center.c  gnome-control-center.c  shell-search-renderer.c  shell.ui
src/cut-n-paste/: Makefile.am
src/cut-n-paste/libgnome-control-center/: Makefile.am
src/cut-n-paste/shell/: Makefile.am  cc-shell-category-view.c  cc-shell-item-view.c
src/patch/: gnome-control-center.patch  update-patch.sh
