AC_INIT([y2cc-gnome], [0.1.1], [])

AC_CONFIG_SRCDIR([.])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.9 tar-ustar])
AM_MAINTAINER_MODE

AC_SUBST([ACLOCAL_AMFLAGS], ["\${ACLOCAL_FLAGS}"])

GNOME_COMPILE_WARNINGS

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

dnl ==============================================
dnl Check that we meet the  dependencies
dnl ==============================================
AM_PATH_GLIB_2_0(2.8.0,,,gobject)

PKG_CHECK_MODULES(CONTROL, libslab libpanelapplet-2.0 gnome-desktop-2.0 libgnomeui-2.0 libgnome-menu)
AC_SUBST(CONTROL_CFLAGS)
AC_SUBST(CONTROL_LIBS)

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)

if test x"$GCONFTOOL" = xno; then
  AC_MSG_ERROR([gconftool-2 executable was not found in your path - should be install with gconf])
fi

AM_GCONF_SOURCE_2

dnl ==============================================
dnl End: Gconf
dnl ==============================================

AC_OUTPUT([
Makefile
etc/Makefile
src/Makefile
])
